# pyniryo

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AGENT.md  MANIFEST.in  Makefile  README.rst  index.html  models.py  mypy.ini  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py  tox.ini
.docker/: Dockerfile
.github/workflows/: documentation.yml
0.1.0/: index.html  objects.inv  search.html
0.1.0/.doctrees/: environment.pickle  index.doctree
0.1.0/examples/: code_templates.html  examples_tool_action.html
0.2.0/: genindex.html
0.2.0/.doctrees/: environment.pickle
0.2.0/setup/: ip_address.html
0.2.0/vision/: image_processing_overview.html
0.2.1/.doctrees/: environment.pickle
0.2.1/examples/: examples_frames.html  examples_movement.html
0.2.1/setup/: verify_setup.html
0.3.0/.doctrees/: environment.pickle
0.3.0/setup/: ip_address.html
0.3.0/vision/: image_processing_overview.html
0.4.0/.doctrees/: environment.pickle
0.4.0/setup/: installation.html
0.4.1/.doctrees/: environment.pickle
0.5.0/.doctrees/: environment.pickle
0.6.0/: search.html
0.6.0/.doctrees/: environment.pickle
0.6.0/examples/: examples_basics.html  examples_tool_action.html
0.6.1/.doctrees/: environment.pickle
0.6.1/examples/: examples_movement.html  examples_vision.html
0.6.2/: py-modindex.html
0.6.2/.doctrees/: environment.pickle
0.6.3/.doctrees/: environment.pickle
0.7.0/.doctrees/: environment.pickle
0.7.0/examples/: examples_frames.html
0.7.1/: .buildinfo  searchindex.js
0.7.1/.doctrees/: environment.pickle
0.7.1/setup/: verify_setup.html
0.7.2/: index.html  objects.inv
0.7.2/.doctrees/: environment.pickle
0.7.4/: genindex.html
0.7.4/.doctrees/: environment.pickle
0.7.5/.doctrees/: environment.pickle
0.7.6/: searchindex.js
0.7.6/.doctrees/: environment.pickle
0.7.7/.doctrees/: environment.pickle
0.7.7/examples/: examples_conveyor.html
0.7.7/vision/: image_processing_overview.html
0.7.9/.doctrees/: environment.pickle
0.7.9/versions/: compatibility.html
0.8.0/.doctrees/: environment.pickle  index.doctree
0.8.0/examples/: code_templates.html
0.8.1/.doctrees/: environment.pickle
0.8.1/_modules/: index.html
docs/: README_DEV.md  conf.py  index.rst  requirements.txt
docs/examples/: examples_basics.rst  examples_conveyor.rst  examples_frames.rst  examples_movement.rst  examples_tool_action.rst  examples_vision.rst
docs/scripts/: build_docs.sh  generate_pdf.sh
docs/setup/: ip_address.rst
docs/static/: app.js  override.css
docs/templates/: layout.html
docs/versions/: compatibility.rst
docs/vision/: image_processing_overview.rst
examples/TPs/: tp_vision_decouverte.py
examples/nate/: advanced_move.py  basic_move.py  execute_program.py  log_utils.py  move_joints.py  move_poses.py  move_trajectory.py
examples/simple_scripts/: WebcamVideoStream.py  calibrate_move.py  control_with_mouse.py  control_with_tkinter.py  get_pose.py  kinematics.py  little_conditionning.py  simple_pick_place_w_conveyor.py  simple_vision_pick_n_place.py  video_stream.py  workspace_creation.py
examples/vision_demonstrators/: 1_simple_reference_conditioning.py  2_multiple_reference_conditioning.py  3_conditioning_and_packing_2_workspaces.py  4_conditionning_with_conveyor.py
pyniryo/: __init__.py
pyniryo/api/: communication_functions.py  enums_communication.py  objects.py  tcp_client.py
pyniryo/nate/: __init__.py  client.py  exceptions.py  http.py  models.py
pyniryo/pyniryo_nate/: client.py  const.py  exceptions.py  http_client.py
pyniryo/utils/: logging.py  transform_functions.py
pyniryo/vision/: enums.py  image_functions.py  markers_detection.py
requirements/: docs_py2.txt  docs_py3.txt  python2.txt  python3.txt
scripts/: build_docs_dev.py  build_docs_versioned.py  build_package.sh  generate_asyncapi_models.py  generate_paths.py  generate_pydantic_models.py  generate_topics.py  requirements.txt  setup_env.sh  upload_package.sh
tests/: 01_main_purpose.py  02_move_functions.py  03_saved_files.py  06_ios.py  09_tools.py  requirements.txt  test_pyniryo.py
tests/nate/: base.py  test_auth.py  test_client.py  test_device.py  test_http.py  test_io.py  test_metrics.py  test_motion_planner.py  test_mqtt.py  test_programs.py  test_robot.py  test_users.py
tests/ned/: 01_main_purpose.py  02_move_functions.py  03_saved_files.py  04_objects.py  05_pick_place.py  07_led_ring.py  08_sound.py  10_vision.py  11_conveyors.py
tests/src/: base_test.py
v0.0.2/: py-modindex.html  searchindex.js
v1.0.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.5/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.1.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.1.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.1.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.0-1/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.1-1/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.5/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+838 files in other folders)
