[build-system]
requires = ["setuptools>=80.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "pyniryo/_version.py"

[project]
name = "pyniryo"
dynamic = ["version"]
description = "Package to control Niryo Ned and Nate Robots"
readme = "README.rst"
license-files = ["LICENSE"]
authors = [
    {name = "Niryo", email = "j.mottier@niryo.com"}
]
maintainers = [
    {name = "Niryo", email = "j.mottier@niryo.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "enum34",
    "opencv-python-headless",
    "numpy",
    "typing-extensions",
    "paho-mqtt",
    "requests",
    "types-requests",
    "pydantic",
    "pydantic[email]",
    "strenum",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxemoji",
    "sphinx-versioned-docs",
    "sphinx-tabs",
    "sphinx-togglebutton",
]
tests = [
    "pytest",
    "coverage",
    "mypy",
]
scripts = [
    "openapi3-parser",
    "pyyaml",
    "datamodel-code-generator[ruff]",
]
dev = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxemoji",
    "sphinx-versioned-docs",
    "sphinx-tabs",
    "sphinx-togglebutton",
    "pytest",
    "coverage",
    "mypy",
    "openapi3-parser",
    "pyyaml",
    "datamodel-code-generator[ruff]",
]

[project.urls]
Homepage = "https://github.com/NiryoRobotics/pyniryo"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
pyniryo = ["py.typed"]

[tool.pycodestyle]
statistics = true

[tool.yapf]
based_on_style = "pep8"

column_limit = 120
split_arguments_when_comma_terminated = 1
split_all_top_level_comma_separated_values = 1
split_before_dot = 1